name:                tictactoe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/james-novino/tictactoe#readme
license:             BSD3
license-file:        LICENSE
author:              James Novino
maintainer:          james_novino@hotmail.com
copyright:           2018 James Novino
category:            Education
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tictactoe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
